[gd_scene load_steps=3 format=3 uid="uid://ccmgw3x18f2l4"]

[ext_resource type="Script" path="res://ui/player_panel.gd" id="1_tw8fe"]

[sub_resource type="LabelSettings" id="LabelSettings_wvvu2"]
font_size = 32

[node name="PlayerPanel" type="Panel"]
custom_minimum_size = Vector2(0, 50)
script = ExtResource("1_tw8fe")

[node name="No" type="Label" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 10.0
offset_right = 58.0
grow_vertical = 2
text = "1P"
label_settings = SubResource("LabelSettings_wvvu2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="Label" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 66.0
offset_right = 131.0
grow_vertical = 2
text = "Player"
label_settings = SubResource("LabelSettings_wvvu2")
vertical_alignment = 1

[node name="PlayerColor" type="ColorRect" parent="PlayerName"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Ready" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "Ready"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Remove" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "Remove"

[connection signal="pressed" from="HBoxContainer/Remove" to="." method="_on_remove_pressed"]
